[package]
name = "networktool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.8"
pnet = "0.34.0"
colored = "2.0.4"
beep = "0.3.0"
toml = "0.5"
notify-rust = "4.0"
serde = { version = "1.0.188", features = ["derive"] }
crossterm = "0.27.0"
